crates/ruff_python_parser/tests/snapshots/invalid_syntax@expressions__dict__recover.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/invalid/expressions/dict/recover.py
---
## AST

```
Module(
    ModModule {
        range: 0..273,
        body: [
            Expr(
                StmtExpr {
                    range: 88..91,
                    value: Set(
                        ExprSet {
                            range: 88..91,
                            elts: [
                                Name(
                                    ExprName {
                                        range: 89..89,
                                        id: "",
                                        ctx: Invalid,
                                    },
                                ),
                            ],
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    range: 93..105,
                    value: Dict(
                        ExprDict {
                            range: 93..105,
                            keys: [
                                Some(
                                    NumberLiteral(
                                        ExprNumberLiteral {
                                            range: 94..95,
                                            value: Int(
                                                1,
                                            ),
                                        },
                                    ),
                                ),
                                Some(
                                    NumberLiteral(
                                        ExprNumberLiteral {
                                            range: 100..101,
                                            value: Int(
                                                3,
                                            ),
                                        },
                                    ),
                                ),
                            ],
                            values: [
                                NumberLiteral(
                                    ExprNumberLiteral {
                                        range: 97..98,
                                        value: Int(
                                            2,
                                        ),
                                    },
                                ),
                                NumberLiteral(
                                    ExprNumberLiteral {
                                        range: 103..104,
                                        value: Int(
                                            4,
                                        ),
                                    },
                                ),
                            ],
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    range: 107..115,
                    value: Dict(
                        ExprDict {
                            range: 107..115,
                            keys: [
                                Some(
                                    NumberLiteral(
                                        ExprNumberLiteral {
                                            range: 108..109,
                                            value: Int(
                                                1,
                                            ),
                                        },
                                    ),
                                ),
                            ],
                            values: [
                                NumberLiteral(
                                    ExprNumberLiteral {
                                        range: 111..112,
                                        value: Int(
                                            2,
                                        ),
                                    },
                                ),
                            ],
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    range: 133..144,
                    value: Dict(
                        ExprDict {
                            range: 133..144,
                            keys: [
                                Some(
                                    NumberLiteral(
                                        ExprNumberLiteral {
                                            range: 134..135,
                                            value: Int(
                                                1,
                                            ),
                                        },
                                    ),
                                ),
                                Some(
                                    NumberLiteral(
                                        ExprNumberLiteral {
                                            range: 139..140,
                                            value: Int(
                                                3,
                                            ),
                                        },
                                    ),
                                ),
                            ],
                            values: [
                                NumberLiteral(
                                    ExprNumberLiteral {
                                        range: 137..138,
                                        value: Int(
                                            2,
                                        ),
                                    },
                                ),
                                NumberLiteral(
                                    ExprNumberLiteral {
                                        range: 142..143,
                                        value: Int(
                                            4,
                                        ),
                                    },
                                ),
                            ],
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    range: 157..162,
                    value: Dict(
                        ExprDict {
                            range: 157..162,
                            keys: [
                                Some(
                                    NumberLiteral(
                                        ExprNumberLiteral {
                                            range: 158..159,
                                            value: Int(
                                                1,
                                            ),
                                        },
                                    ),
                                ),
                            ],
                            values: [
                                Name(
                                    ExprName {
                                        range: 160..160,
                                        id: "",
                                        ctx: Invalid,
                                    },
                                ),
                            ],
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    range: 201..205,
                    value: Dict(
                        ExprDict {
                            range: 201..205,
                            keys: [
                                None,
                            ],
                            values: [
                                Name(
                                    ExprName {
                                        range: 204..204,
                                        id: "",
                                        ctx: Invalid,
                                    },
                                ),
                            ],
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    range: 206..222,
                    value: Dict(
                        ExprDict {
                            range: 206..222,
                            keys: [
                                Some(
                                    Name(
                                        ExprName {
                                            range: 207..208,
                                            id: "x",
                                            ctx: Load,
                                        },
                                    ),
                                ),
                                None,
                                Some(
                                    Name(
                                        ExprName {
                                            range: 217..218,
                                            id: "a",
                                            ctx: Load,
                                        },
                                    ),
                                ),
                            ],
                            values: [
                                Name(
                                    ExprName {
                                        range: 210..211,
                                        id: "y",
                                        ctx: Load,
                                    },
                                ),
                                Name(
                                    ExprName {
                                        range: 215..215,
                                        id: "",
                                        ctx: Invalid,
                                    },
                                ),
                                Name(
                                    ExprName {
                                        range: 220..221,
                                        id: "b",
                                        ctx: Load,
                                    },
                                ),
                            ],
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | # Test cases for dictionary expressions where the parser recovers from a syntax error.
2 | 
3 | {,}
  |  ^ Syntax Error: Expected an expression
4 | 
5 | {1: 2,,3: 4}
  |


  |
3 | {,}
4 | 
5 | {1: 2,,3: 4}
  |       ^ Syntax Error: Expected an expression or a '}'
6 | 
7 | {1: 2,,}
  |


  |
5 | {1: 2,,3: 4}
6 | 
7 | {1: 2,,}
  |       ^ Syntax Error: Expected an expression or a '}'
8 | 
9 | # Missing comma
  |


   |
 9 | # Missing comma
10 | {1: 2 3: 4}
   |       ^ Syntax Error: expected Comma, found Int
11 | 
12 | # No value
   |


   |
12 | # No value
13 | {1: }
   |     ^ Syntax Error: Expected an expression
14 | 
15 | # No value for double star unpacking
   |


   |
15 | # No value for double star unpacking
16 | {**}
   |    ^ Syntax Error: Expected an expression
17 | {x: y, **, a: b}
   |


   |
15 | # No value for double star unpacking
16 | {**}
17 | {x: y, **, a: b}
   |          ^ Syntax Error: Expected an expression
18 | 
19 | # This is not a double star unpacking
   |
